[package]
name = "rust-web-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.40", features = ["full", "sync"] }
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.20"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
indicatif = "0.17"